# all-my-cookiecutters

./: LICENSE.txt  README.md
latex-basic-template/: cookiecutter.json
latex-basic-template/hooks/: pre_gen_project.py  pre_prompt.py
latex-basic-template/{{cookiecutter.project_slug}}/: main.tex
pandoc-document/: cookiecutter.json
pandoc-document/{{cookiecutter.file_name}}/: build.ps1  build.sh  pandoc_latex_template.latex  {{cookiecutter.file_name}}.md
python-modular-app/: cookiecutter.json
python-modular-app/{{cookiecutter.project_slug}}/: .gitignore  requirements.txt
python-modular-app/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  cli.py
python-modular-app/{{cookiecutter.repo_name}}/: README.md  pyproject.toml
python-modular-app/{{cookiecutter.repo_name}}/{{cookiecutter.project_slug}}/: analyze.py  fileio.py  plot.py
python-zmq-app/: cookiecutter.json
python-zmq-app/{{cookiecutter.repo_name}}/: pyproject.toml
python-zmq-app/{{cookiecutter.repo_name}}/tests/: test_basic.py
python-zmq-app/{{cookiecutter.repo_name}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  app.py  cli.py  communicate.py  fileio.py
